--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "restapi_with_codersgyan",
+  "name": "restapi_with_sarvesh",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon server.ts"
@@ -21,7 +20,8 @@
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.14.2",
-    "eslint": "^9.11.1",
+    "@types/woocommerce__woocommerce-rest-api": "^1.0.5",
+    "eslint": "^8.57.0",
     "globals": "^15.10.0",
     "nodemon": "^3.1.3",
     "ts-node": "^10.9.2",
@@ -29,15 +29,19 @@
     "typescript-eslint": "^7.18.0"
   },
   "dependencies": {
+    "@woocommerce/woocommerce-rest-api": "^1.0.1",
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cloudinary": "^2.2.0",
-    "": "^2.8.5",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "multer": "^1.4.5-lts.1"
-  }
+  },
+  "type": "commonjs",
+  "description": ""
 }
